Add spring boot plugin and configure bootJar and bootRun tasks