@@ -1,11 +1,16 @@
 buildscript {
-    ext.kotlin_version = '1.2.41'
+    ext {
+        kotlin_version = '1.2.41'
+        bootVersion = '2.0.1.RELEASE'
+    }
 
     repositories {
         mavenCentral()
+        maven { url 'http://repo.spring.io/plugins-release' }
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:$bootVersion"
     }
 }
 
@@ -13,6 +18,7 @@ group 'com.fredboat'
 version '0.1'
 
 apply plugin: 'java'
+apply plugin: 'org.springframework.boot'
 apply plugin: 'kotlin'
 
 sourceCompatibility = 9
@@ -24,7 +30,6 @@ repositories {
 
 ext {
     jdaVersion = "3.6.0_354"
-    bootVersion = "2.0.0.RELEASE"
     amqpVersion = "2.0.3.RELEASE"
     gsonVersion = '2.8.2'
     jacksonKotlinVersion = "2.9.+"
@@ -41,6 +46,29 @@ dependencies {
     compile "com.fasterxml.jackson.module:jackson-module-kotlin:$jacksonKotlinVersion"
     compile "ch.qos.logback:logback-classic:$logbackVersion"
     testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+
+bootRun {
+    //compiling tests during bootRun increases the likelyhood of catching broken tests locally instead of on the CI
+    dependsOn compileTestJava
+
+    //pass in custom jvm args
+    // source: https://stackoverflow.com/a/25079415
+    // example: ./gradlew bootRun -PjvmArgs="--illegal-access=debug -Dwhatever=value"
+    if (project.hasProperty('jvmArgs')) {
+        jvmArgs project.jvmArgs.split('\\s+')
+    }
+}
+
+bootJar {
+    archiveName = "Quarterdeck.jar"
+    doLast {
+        //copies the jar into a place where the Dockerfile can find it easily (and users maybe too)
+        copy {
+            from 'build/libs/Quarterdeck.jar'
+            into '.'
+        }
+    }
 }
 
 compileKotlin {
